// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movements in should display fromCity when fromAgencyDescription is not set  1`] = `
<Fragment>
  <GridRow>
    <GridCol
      columnFull={false}
      columnOneHalf={false}
      columnOneQuarter={false}
      columnOneThird={false}
      columnThreeQuarters={false}
      columnTwoThirds={false}
      setWidth="one-quarter"
    >
      <SortLov
        setColumnSort={[MockFunction]}
        sortColumn="lastName"
        sortColumns={
          Array [
            "lastName",
          ]
        }
        sortOrder="ASC"
      />
    </GridCol>
  </GridRow>
  <table>
    <thead>
      <tr>
        <th
          className="straight width10"
        />
        <th
          className="straight width10"
        >
          <SortableColumn
            column="lastName"
            heading="Name"
            setColumnSort={[MockFunction]}
            sortColumn="lastName"
            sortOrder="ASC"
          />
        </th>
        <th
          className="straight width10"
        >
          Prison no.
        </th>
        <th
          className="straight width10"
        >
          D.O.B.
        </th>
        <th
          className="straight width10"
        >
          Incentive Level
        </th>
        <th
          className="straight width10"
        >
          Location
        </th>
        <th
          className="straight width10"
        >
          Time in
        </th>
        <th
          className="straight width15"
        >
          Arrived from
        </th>
        <th
          className="straight width15"
        >
          Flags
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="row-gutters"
        key="G0000GG___CELL-1_"
      >
        <td
          className="row-gutters"
        >
          <OffenderImage
            offenderNo="G0000GG"
          />
        </td>
        <td
          className="row-gutters"
        >
          <OffenderName
            firstName="firstName"
            lastName="lastName"
          />
        </td>
        <td
          className="row-gutters"
        >
          G0000GG
        </td>
        <td
          className="row-gutters"
        >
          <FormattedDate />
        </td>
        <td />
        <td
          className="row-gutters"
        >
          <Connect(Location)
            location="CELL-1"
          />
        </td>
        <td>
          <HoursAndMinutes
            hhmmss="12:01:02"
          />
        </td>
        <td>
          York
        </td>
        <td
          className="row-gutters"
        >
          <Flags
            alerts={
              Array [
                "HA",
                "XSA",
                "XA",
                "PEEP",
                "XEL",
                "XRF",
                "XTACT",
              ]
            }
            category=""
            offenderNo="G0000GG"
          />
        </td>
      </tr>
    </tbody>
  </table>
</Fragment>
`;

exports[`Movements in should remove the offender link when the location is not set 1`] = `
<Fragment>
  <GridRow>
    <GridCol
      columnFull={false}
      columnOneHalf={false}
      columnOneQuarter={false}
      columnOneThird={false}
      columnThreeQuarters={false}
      columnTwoThirds={false}
      setWidth="one-quarter"
    >
      <SortLov
        setColumnSort={[MockFunction]}
        sortColumn="lastName"
        sortColumns={
          Array [
            "lastName",
          ]
        }
        sortOrder="ASC"
      />
    </GridCol>
  </GridRow>
  <table>
    <thead>
      <tr>
        <th
          className="straight width10"
        />
        <th
          className="straight width10"
        >
          <SortableColumn
            column="lastName"
            heading="Name"
            setColumnSort={[MockFunction]}
            sortColumn="lastName"
            sortOrder="ASC"
          />
        </th>
        <th
          className="straight width10"
        >
          Prison no.
        </th>
        <th
          className="straight width10"
        >
          D.O.B.
        </th>
        <th
          className="straight width10"
        >
          Incentive Level
        </th>
        <th
          className="straight width10"
        >
          Location
        </th>
        <th
          className="straight width10"
        >
          Time in
        </th>
        <th
          className="straight width15"
        >
          Arrived from
        </th>
        <th
          className="straight width15"
        >
          Flags
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="row-gutters"
        key="G0000GG_Hull (HMP)___"
      >
        <td
          className="row-gutters"
        >
          <OffenderImage
            offenderNo="G0000GG"
          />
        </td>
        <td
          className="row-gutters"
        >
          <OffenderName
            firstName="firstName"
            lastName="lastName"
          />
        </td>
        <td
          className="row-gutters"
        >
          G0000GG
        </td>
        <td
          className="row-gutters"
        >
          <FormattedDate />
        </td>
        <td />
        <td
          className="row-gutters"
        >
          <Connect(Location) />
        </td>
        <td>
          <HoursAndMinutes
            hhmmss="12:01:02"
          />
        </td>
        <td>
          Hull (HMP)
        </td>
        <td
          className="row-gutters"
        >
          <Flags
            alerts={
              Array [
                "HA",
                "XSA",
                "XA",
                "PEEP",
                "XEL",
                "XRF",
                "XTACT",
              ]
            }
            category=""
            offenderNo="G0000GG"
          />
        </td>
      </tr>
    </tbody>
  </table>
</Fragment>
`;

exports[`Movements in should remove the offender link when the toAgencyId does not match the current agencyId/active case load 1`] = `
<Fragment>
  <GridRow>
    <GridCol
      columnFull={false}
      columnOneHalf={false}
      columnOneQuarter={false}
      columnOneThird={false}
      columnThreeQuarters={false}
      columnTwoThirds={false}
      setWidth="one-quarter"
    >
      <SortLov
        setColumnSort={[MockFunction]}
        sortColumn="lastName"
        sortColumns={
          Array [
            "lastName",
          ]
        }
        sortOrder="ASC"
      />
    </GridCol>
  </GridRow>
  <table>
    <thead>
      <tr>
        <th
          className="straight width10"
        />
        <th
          className="straight width10"
        >
          <SortableColumn
            column="lastName"
            heading="Name"
            setColumnSort={[MockFunction]}
            sortColumn="lastName"
            sortOrder="ASC"
          />
        </th>
        <th
          className="straight width10"
        >
          Prison no.
        </th>
        <th
          className="straight width10"
        >
          D.O.B.
        </th>
        <th
          className="straight width10"
        >
          Incentive Level
        </th>
        <th
          className="straight width10"
        >
          Location
        </th>
        <th
          className="straight width10"
        >
          Time in
        </th>
        <th
          className="straight width15"
        >
          Arrived from
        </th>
        <th
          className="straight width15"
        >
          Flags
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="row-gutters"
        key="G0000GG_Hull (HMP)__CELL-1_"
      >
        <td
          className="row-gutters"
        >
          <OffenderImage
            offenderNo="G0000GG"
          />
        </td>
        <td
          className="row-gutters"
        >
          <OffenderName
            firstName="firstName"
            lastName="lastName"
          />
        </td>
        <td
          className="row-gutters"
        >
          G0000GG
        </td>
        <td
          className="row-gutters"
        >
          <FormattedDate />
        </td>
        <td />
        <td
          className="row-gutters"
        >
          <Connect(Location)
            location="CELL-1"
          />
        </td>
        <td>
          <HoursAndMinutes
            hhmmss="12:01:02"
          />
        </td>
        <td>
          Hull (HMP)
        </td>
        <td
          className="row-gutters"
        >
          <Flags
            alerts={
              Array [
                "HA",
                "XSA",
                "XA",
                "PEEP",
                "XEL",
                "XRF",
                "XTACT",
              ]
            }
            category=""
            offenderNo="G0000GG"
          />
        </td>
      </tr>
    </tbody>
  </table>
</Fragment>
`;

exports[`Movements in should render page correctly 1`] = `
<Fragment>
  <GridRow>
    <GridCol
      columnFull={false}
      columnOneHalf={false}
      columnOneQuarter={false}
      columnOneThird={false}
      columnThreeQuarters={false}
      columnTwoThirds={false}
      setWidth="one-quarter"
    >
      <SortLov
        setColumnSort={[MockFunction]}
        sortColumn="lastName"
        sortColumns={
          Array [
            "lastName",
          ]
        }
        sortOrder="ASC"
      />
    </GridCol>
  </GridRow>
  <table>
    <thead>
      <tr>
        <th
          className="straight width10"
        />
        <th
          className="straight width10"
        >
          <SortableColumn
            column="lastName"
            heading="Name"
            setColumnSort={[MockFunction]}
            sortColumn="lastName"
            sortOrder="ASC"
          />
        </th>
        <th
          className="straight width10"
        >
          Prison no.
        </th>
        <th
          className="straight width10"
        >
          D.O.B.
        </th>
        <th
          className="straight width10"
        >
          Incentive Level
        </th>
        <th
          className="straight width10"
        >
          Location
        </th>
        <th
          className="straight width10"
        >
          Time in
        </th>
        <th
          className="straight width15"
        >
          Arrived from
        </th>
        <th
          className="straight width15"
        >
          Flags
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="row-gutters"
        key="G0000GG_Hull (HMP)__MDI-1-3-017_MDI"
      >
        <td
          className="row-gutters"
        >
          <OffenderLink
            alerts={false}
            offenderNo="G0000GG"
          >
            <OffenderImage
              offenderNo="G0000GG"
            />
          </OffenderLink>
        </td>
        <td
          className="row-gutters"
        >
          <OffenderLink
            alerts={false}
            offenderNo="G0000GG"
          >
            <OffenderName
              firstName="firstName"
              lastName="lastName"
            />
          </OffenderLink>
        </td>
        <td
          className="row-gutters"
        >
          G0000GG
        </td>
        <td
          className="row-gutters"
        >
          <FormattedDate />
        </td>
        <td />
        <td
          className="row-gutters"
        >
          <Connect(Location)
            location="MDI-1-3-017"
          />
        </td>
        <td>
          <HoursAndMinutes
            hhmmss="12:01:02"
          />
        </td>
        <td>
          Hull (HMP)
        </td>
        <td
          className="row-gutters"
        >
          <Flags
            alerts={
              Array [
                "HA",
                "XSA",
                "XA",
                "PEEP",
                "XEL",
                "XRF",
                "XTACT",
              ]
            }
            category=""
            offenderNo="G0000GG"
          />
        </td>
      </tr>
    </tbody>
  </table>
</Fragment>
`;
